23/05/2015 - 0.10 - make sure that the MainWindow is displayed and focused when restoring it from system tray
                  - make sure to properly shutdown B3 when closing the application from OSX dock icon
26/05/2015 - 0.11 - split module into separate submodules
                  - implement B3 database update dialog (available from Menu::Tools)
                  - implement drag&drop in MainTable: add new B3 by simply dropping the configuration file on it
01/06/2015 - 0.12 - minor adjustments for win32 platform
                  - support multi-drag/drop in main table (create multiple B3 processes)
                  - fixed 'start/stop all' not bringing up main window
                  - fixed some weird characters being printed into STDOut console
02/06/2015 - 0.13 - added preferences dialog
                  - added menu icons
                  - added game icons in Main Table
03/06/2015 - 0.14 - display B3 process last run in main table
                  - customized QRadioButton and QCheckBox layout
                  - minor fixes for OSX
05/06/2015 - 0.15 - added configuration file toolbar button
                  - adjust main table toolbar margins according to the running OS
06/06/2015 - 0.16 - allow to inspect STDOut console also when the B3 process is not running
                  - added news scrolling widget in main window
                  - make datetime conversion more accurate
                  - allow resolving of @conf in b3.getAbsolutePath by passing as optional parameter the process
                    configuration file instance
12/06/2015 - 0.17 - linux adjustments
17/06/2015 - 0.18 - added some more debugging
22/06/2015 - 0.19 - make About and License dialog dimensions os dependent
                  - adjusted Main Table with to fill up line
23/06/2015 - 0.20 - adjusted Main Table width on darwin system not to show horizontal scrollbar
                  - fixed UpdateDatabase dialog layout not showing information message properly